--- a/public/register.html
+++ b/public/register.html
@@ -14,25 +14,32 @@
         <div class="row">
           <label for="name">Nombre completo</label>
           <input id="name" name="name" type="text" required minlength="2" />
+          <small class="hint" id="nameHint"></small>
         </div>
 
         <div class="row">
           <label for="email">Correo electrónico</label>
           <input id="email" name="email" type="email" required />
+          <small class="hint" id="emailHint"></small>
         </div>
 
         <div class="row">
           <label for="password">Contraseña</label>
           <input id="password" name="password" type="password" required minlength="6" />
+          <div class="pw-strength" aria-hidden>
+            <div class="pw-bar" id="pwBar"></div>
+          </div>
+          <small class="hint" id="passwordHint"></small>
         </div>
 
         <div class="row">
           <label for="passwordConfirm">Confirmar contraseña</label>
           <input id="passwordConfirm" name="passwordConfirm" type="password" required minlength="6" />
+          <small class="hint" id="confirmHint"></small>
         </div>
 
         <div class="actions">
-          <button type="submit">Registrarme</button>
+          <button id="submitBtn" type="submit" disabled>Registrarme</button>
         </div>
 
         <div id="message" role="status" aria-live="polite"></div>
